--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -32,34 +32,23 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
   background-color: #eaeaea;
   border: none;
 }
-
-.navbar>.container .navbar-brand {
-    margin-right: 10px;
-}
-
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   color: #000;
-  font-weight: bold !important;
-  background-color: #eaeaea !important;
+  font-weight: bold;
+  background-color: #eaeaea;
 }
 .navbar-inverse .navbar-brand {
   color: #EEEEEE;
 }
 .navbar-inverse .navbar-nav > li > a {
-  color: #000;
-}
-
-.navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus {
-    color: #000;
-    background-color: #EEEEEE;
+  color: #111;
 }
 .navbar-inverse {
 	font-family: 'Lato', sans-serif;
 	text-transform: uppercase;
 	font-size: 12px;
-    border-bottom:1px solid #DDD;
 }
 .navbar-inverse .navbar-nav > .dropdown > a .caret {
   border-top-color: #EEEEEE;
@@ -75,7 +64,7 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
   background-color: #EEEEEE;
-  color: #111;
+  color: #eaeaea;
 }
 .dropdown-menu {
   background-color: #EEEEEE;
@@ -404,10 +393,6 @@ img.img-about {
   height: 64px;
   width: 64px;
 }
-
-img.media-object{
-    margin-right:10px;
-}
 .media-heading a{
   color: #333;
 }
@@ -424,9 +409,7 @@ img.media-object{
 
 .thumbnail {
 	position: relative;
-    font-size: 14px;
 }
-
 .thumbnail .visit {
 	position: absolute;
 	opacity: 0;
@@ -526,13 +509,11 @@ img.media-object{
 /* ===== Footer ===== */
 
 footer {
-    width: 100%;
 	margin-top: 60px;
+	padding: 20px 0;
 	background: #0A91AB;
+	color: white;
 	font-weight: 300;
-    color: white;
-    position: absolute;
-    overflow: hidden;
 }
 footer a {
 	color: #81D685;
@@ -830,654 +811,8 @@ li.account p{
 	line-height: 38px;
 	border-radius: 3px;
 	text-align: center;
-    background: rgba(255, 255, 255, 0.5);
 }
-/* ===== Resource edit page changes ===== */
 
-#contact-table .icon-button{
-    float:left;
-    background-color: transparent;
-    border: 0;
-}
-#txt-title{
-    width: calc(100% - 100px);
-    font-size: 30px;
-    margin-bottom: 30px;
-    height: auto;
-}
-#contact-table .icon-button{
-    float:left;
-    background-color: transparent;
-    border: 0;
-}
-
-#txt-abstract{
-    height: 155px;
-}
-
-span.remove{
-    position: absolute;
-    left: 0;
-    height: 100% !important;
-    background: #EEE;
-    top: 0;
-}
-
-.form-control{
-    margin-bottom:8px;
-}
-
-.no-padding{
-    padding:0;
-}
-
-.icon-remove{
-    font-size: 17px;
-    top: 3px;
-    left: 6px;
-    color: rgb(217, 83, 79);
-    cursor:pointer;
-}
-
-.icon-add{
-    font-size: 17px;
-    top: 3px;
-    left: 1px;
-    color: #5cb85c;
-    cursor:pointer;
-}
-
-.icon-add:hover{
-    color: #47a447;
-}
-
-.icon-remove:hover{
-    color: rgb(168, 69, 66);
-}
-
-#panel-left{
-    padding-right:8px;
-    padding-left:0;
-    margin-bottom: 10px;
-}
-
-#panel-right{
-    padding-left:8px;
-    padding-right:0;
-    margin-bottom: 10px;
-}
-#add-keyword-wrapper{
-    width: 200px;
-    display: inline-flex;
-}
-
-
-#relatedResourcesTab{
-    overflow:hidden;
-}
-
-#comments{
-    padding-bottom: 15px;
-    margin: 40px 0;
-}
-
-.info-group table td{
-    padding-left:15px;
-}
-
-#resourceSpecificTab{
-    overflow-x:hidden;
-}
-#txt-title{
-    width: calc(100% - 100px);
-    font-size: 30px;
-    margin-bottom: 30px;
-    height: auto;
-}
-
-#txt-abstract{
-    height: 155px;
-}
-
-span.remove{
-    position: absolute;
-    left: 0;
-    height: 100% !important;
-    background: #EEE;
-    top: 0;
-}
-
-.form-control{
-    margin-bottom:8px;
-}
-
-.no-padding{
-    padding:0;
-}
-
-.icon-remove{
-    font-size: 17px;
-    top: 3px;
-    left: 6px;
-    color: rgb(217, 83, 79);
-    cursor:pointer;
-}
-
-.icon-add{
-    font-size: 17px;
-    top: 3px;
-    left: 1px;
-    color: #5cb85c;
-    cursor:pointer;
-}
-
-.icon-add:hover{
-    color: #47a447;
-}
-
-.icon-remove:hover{
-    color: rgb(168, 69, 66);
-}
-
-#panel-left{
-    padding-right:8px;
-    padding-left:0;
-    margin-bottom: 10px;
-}
-
-#panel-right{
-    padding-left:8px;
-    padding-right:0;
-    margin-bottom: 10px;
-}
-#add-keyword-wrapper{
-    width: 200px;
-    display: inline-flex;
-}
-
-
-/* ===== Resource UI changes ===== */
-html, body{
-    height:100%;
-    /*background:#F4F4F4;*/
-}
-
-#btn-public.active{
-    color:#FFF;
-    background: #5cb85c;
-    border-color: #20833F;
-}
-
-#btn-private.active{
-    color:#FFF;
-    background:#d9534f;
-    border-color: #8C3C3A;
-}
-
-.btn-success {
-    border-color: #20833F;
-}
-
-.btn-danger{
-    border-color: #8C3C3A;
-}
-
-.btn{
-    box-shadow: 0 1px 0 rgba(255,255,255,0.3) inset;
-    /*0 1px 1px rgba(100,100,100,0.3);*/
-}
-#id_user-wrapper{
-    width: calc(100% - 97px);
-    padding: 1px;
-    border: 1px solid #CCC;
-    height: 30px;
-    margin-top: 1px;
-    margin-left: -1px;
-    -webkit-border-radius: 3px;
-    -webkit-border-top-left-radius: 0px;
-    -webkit-border-bottom-left-radius: 0px;
-    -moz-border-radius: 3px;
-    -moz-border-radius-topleft: 0px;
-    -moz-border-radius-bottomleft: 0px;
-    border-radius: 3px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-}
-
-#permission-panel #id_user-autocomplete{
-    width: 100%;
-    height: 100%;
-    border: 0;
-    padding: 0px 4px;
-}
-
-#permission-panel .panel-body{
-    padding: 15px 0px;
-}
-
-span.hilight {
-    background: #EEE;
-    margin-left: 14px;
-    width: calc(100% - 14px);
-    height: 100%;
-    display: block;
-}
-
-#form-sharing{
-    margin-top: -6px;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-.file-icon{
-    margin-right: 5px;
-    font-size: 28px;
-    color: #8c8c8c;
-    float:left;
-    top: 6px;
-}
-
-table.table-plain {
-    margin-bottom: 10px;
-    width:100%;
-}
-
-table.table-plain td{
-    padding-right: 10px;
-}
-
-.tab-elements{
-    border:0;
-}
-
-.tab-elements > .panel-tabs > .nav-tabs{
-    margin-bottom: 0;
-    border:0;
-}
-
-
-.tab-elements .nav-tabs li{
-    padding:0;
-}
-.panel-tabs > .nav-tabs > li > a{
-    color:#555;
-    -webkit-border-radius: 4px 4px 0 0;
-    -moz-border-radius: 4px 4px 0 0;
-    border-radius: 4px 4px 0 0;
-    -webkit-box-shadow: inset 0 1px 0 #ffffff;
-    -moz-box-shadow: inset 0 1px 0 #ffffff;
-    box-shadow: inset 0 1px 0 #ffffff;
-}
-
-#coverageTab{
-    overflow-x:hidden;
-}
-
-#coverageTab{
-    overflow-x:hidden;
-}
-.tab-elements > .tabs-body{
-    max-height: 400px;
-    min-height: 150px;
-    border: 1px solid #ddd;
-    padding: 10px;
-    overflow: auto;
-}
-
-.panel-tabs table>tbody>tr>th{
-    border:0;
-}
-
-.division-title {
-    clear:left;
-    font-size: 20px;
-    font-weight: 500;
-    margin-left: 7px;
-    background-color: #FFF !important;
-
-}
-
-.page-title{
-    font-weight: 500;
-    margin: 30px 0px;
-    margin-top: 10px;
-    width: calc(100% - 100px);
-}
-
-.label-file-name{
-    font-weight: bold;
-}
-
-.label-file-size{
-    font-size:12px;
-    margin-bottom: 0;
-}
-
-.table-plain > tbody > tr{
-    /*border-bottom: 1px solid #ddd;*/
-}
-
-.table-plain > tbody > tr:last-child{
-    border:none;
-}
-
-
-body > .container{
-    /*Substract the height of the footer*/
-    min-height: calc(100% - 277px);
-    padding-top: 20px;
-    /*background: #FFF;*/
-    /*margin-top: 20px;*/
-    /*border-radius: 5px;*/
-    /*box-shadow: 0px 0px 5px #B5B5B5;*/
-}
-
-.icon-button {
-    font-size: 22px;
-    cursor: pointer;
-    float: right;
-    margin: 0 4px;
-    padding: 5px;
-    background-color: transparent;
-    width: auto !important;
-
-}
-
-.custom-btn-toolbar .icon-button{
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    background-color: #FFF;
-    border: 1px solid#adadad;
-
-}
-
-.custom-btn-toolbar .icon-button:hover {
-    box-shadow: 0px 0px 5px #B2B2B2;
-}
-
-
-.custom-btn-toolbar{
-    display: block;
-    float: right;
-    background: #F5F5F5;
-    height: auto;
-    padding: 8px 4px;
-    border: 1px solid #D3D3D3;
-    -webkit-border-radius: 6px;
-}
-
-.cc-image{
-    width:88px;
-    height:31px;
-    margin-top: 10px;
-}
-
-#permission-panel{
-    margin-top:20px;
-}
-
-#permission-panel .custom-well{
-    height: 235px;
-    background: #F7F7F7;
-}
-
-.info-icon{
-    color: #FFFFFF;
-    margin-top: 4px;
-    margin-left: -4px;
-    position: absolute;
-    right: 25px;
-    top: 13px;
-}
-
-.info-icon:hover{
-    color: #CCC;
-}
-
-#permission-panel .form-control{
-    margin-bottom:0;
-}
-
-#permission-panel .custom-well .form-group{
-    width:100%;
-}
-
-.btn-update-list{
-    margin-top:4px;
-    margin-right:4px;
-    margin-bottom:4px;
-    width: 100%;
-}
-
-.btn-add-access{
-    -webkit-border-radius: 0px;
-    -webkit-border-top-left-radius: 3px;
-    -webkit-border-bottom-left-radius: 3px;
-    -moz-border-radius: 0px;
-    -moz-border-radius-topleft: 3px;
-    -moz-border-radius-bottomleft: 3px;
-    border-radius: 0px;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-}
-
-.access-panel-title{
-    color: #FFF;
-    background-color: #337ab7;
-    margin: -20px;
-    border: 1px solid #337ab7;
-    padding: 10px;
-    padding-right: 30px;
-    height:52px;
-    margin-bottom: 10px;
-    -webkit-border-top-left-radius: 3px;
-    -webkit-border-top-right-radius: 3px;
-    -moz-border-radius-topleft: 3px;
-    -moz-border-radius-topright: 3px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-}
-
-.abstract{
-    /*line-height: 2;*/
-    /*font-size: 16px;*/
-}
-
-.button-label{
-    font-family: Lato, sans-serif;
-}
-
-.btn-remove{
-    color:#d9534f;
-}
-
-.btn-edit, .btn-share{
-    color: #428BD2;
-}
-
-.btn-download{
-    color:#428bca;
-}
-
-.content-block{
-    margin-bottom:5px;
-    display: table;
-    width:100%;
-}
-
-.sharing-public{
-    border: 1px solid #6E6E6E;
-    padding: 3px 6px;
-    background: #5CB85C;
-    color: #FFF;
-    margin: 3px;
-    border-radius: 15px
-}
-
-.sharing-private{
-    border: 1px solid #6E6E6E;
-    padding: 3px 6px;
-    background: #D9534F;
-    color: #FFF;
-    margin: 3px;
-    border-radius: 3px;
-}
-.citation-label {
-    float:left;
-    font-weight: bold;
-}
-
-#citation-text {
-    display: inline-block;
-    float: left;
-    /*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
-    /*margin-left:10px;*/
-    /*width:90%;*/
-}
-
-#citation-text a, .rights-url a{
-    word-break:break-word;
-}
-
-#btn-download-all, #btn-add-file{
-    margin-bottom:5px;
-}
-
-div#sharing-status {
-    height: 34px;
-}
-
-.info-group {
-    margin-top: -20px;
-}
-
-.tag-list {
-    min-height:46px !important;
-    margin-top:10px;
-    list-style: none;
-    padding: 10px 10px 5px 10px !important;
-}
-
-
-.tag {
-    display: inline-block;
-    margin-bottom: 4px;
-    color: #111111;
-    background-color: #f6f6f6;
-    padding: 1px 10px;
-    border: 1px solid #B0B0B0;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-    -webkit-box-shadow: inset 0 1px 0 #ffffff;
-    -moz-box-shadow: inset 0 1px 0 #ffffff;
-    box-shadow: inset 0 1px 0 #ffffff;
-    /*cursor:pointer;*/
-}
-
-.tag-list li {
-    display: inline-block;
-    margin-right: 5px;
-}
-
-a.tag:hover {
-    text-decoration: none;
-    cursor:default;
-    /*color: #fff;*/
-    /*background-color: #30778d;*/
-    /*border: 1px solid #235767;*/
-    /*-webkit-box-shadow: inset 0 1px 0 #3d97b3;*/
-    /*-moz-box-shadow: inset 0 1px 0 #3d97b3;*/
-    /*box-shadow: inset 0 1px 0 #3d97b3;*/
-}
-
-.user-thumbnail{
-    border: 1px solid #DDD;
-    border-radius: 3px;
-    height: 170px;
-    margin: 5px;
-    display: inline-block;
-    float: left;
-    padding: 10px;
-    font-size: 12px;
-    -webkit-box-shadow: inset 0 1px 0 #ffffff;
-    -moz-box-shadow: inset 0 1px 0 #ffffff;
-    box-shadow: inset 0 1px 0 #ffffff;
-    box-shadow: 1px 1px 8px #DFDFDF;
-    color:#555;
-}
-
-.table-container {
-    max-height: 300px;
-    overflow: auto;
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    padding: 5px 10px;
-}
-
-.header-row{
-    border-bottom:1px solid #ddd;
-}
-
-.custom-well{
-    min-height: 20px;
-    padding: 19px;
-    margin-bottom: 20px;
-    border: 1px solid #e3e3e3;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
-}
-
-.user-thumbnail strong{
-    margin-right:10px;
-}
-
-.user-thumbnail:last-child{
-    margin-bottom: 20px;
-}
-
-.user-thumbnail > .caption{
-    float:left;
-}
-
-img.profile-picture {
-    float: left;
-    height: 150px;
-    width: 150px;
-    border: 0;
-    margin-right:10px;
-    background-color:#ddd;
-}
-
-span.name-label{
-    font-size: 18px;
-    font-weight: bold;
-    display: table;
-}
-
-.tab-elements{
-    overflow-x:auto;
-}
-
-.tab-elements .table:not(.table-striped) {
-    width:auto;
-}
-
-
-
-.tab-elements .table td, .tab-elements .table th{
-    border:0;
-}
-
-.tab-elements .nav-tabs>li>a {
-    border: 1px solid #ddd;
-}
-
-.tab-elements .nav-tabs>li.active>a {
-    border-bottom-color: transparent;
-}
 /* ===== Responsive CSS ===== */
 
 .navbar-inverse .navbar-toggle:hover,
@@ -1635,5 +970,5 @@ span.name-label{
   .bs-sidebar.affix {
     width: 360px;
   }
-}}
+}
 
