--- a/theme/templates/generic/includes/comments.html
+++ b/theme/templates/generic/includes/comments.html
@@ -1,4 +1,4 @@
-{% load i18n mezzanine_tags comment_tags %}
+{% load i18n comments_tags mezzanine_tags%}
 <div id="comments">
 <h3>{% trans "Comments" %}</h3>
 {% if settings.COMMENTS_DISQUS_SHORTNAME %}
@@ -15,7 +15,8 @@ $(function() {
 <style>.input_id_honeypot {display:none !important;}</style>
 {% comment_thread object_for_comments %}
 <h3>{% trans "New Comment" %}</h3>
-<form method="post" id="comment" class="comment-form" action="{{ comment_url }}#comment">
+<!-- <form method="post" id="comment" class="comment-form" action="{{ comment_url }}#comment"> -->
+<form method="post" id="comment" class="comment-form" action="/comment/#comment">
     {% if not request.POST.replied_to %}
     {% fields_for posted_comment_form %}
     {% else %}
