added a summary for number of comments in resource landing page

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -653,7 +653,7 @@
 
     </div>
     </div>
-
+    <h3>There are {{ cm.comments_count }} comment{{ cm.comments_count|pluralize }}</h3>
     {% comments_for cm %}
 
     {#                #}
