fixed some further on Support page re: #136

--- a/hs_core/templates/pages/help.html
+++ b/hs_core/templates/pages/help.html
@@ -33,7 +33,7 @@
                             </div>
                             <div id="faq-cat-1-sub-1" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    The Consortium of Universities for the Advancement of Hydrologic Science, Inc. (CUAHSI) is an organization representing more than 100 U.S. universities and international water-science-related organizations and is sponsored by the National Science Foundation to provide infrastructure and services to advance the development of hydrologic science and education in the United States. The CUAHSI HydroShare is being developed as an online, collaborative environment for the sharing of hydrologic data and models. It will enable people to easily share, discover and access data and models, retrieve them to their desktop or perform analysis seamlessly in a high performance computing environment, thereby enhancing research, education and application of hydrologic knowledge.
+                                    The Consortium of Universities for the Advancement of Hydrologic Science, Inc. (CUAHSI) is an organization representing more than 130 U.S. universities and international water-science-related organizations and is sponsored by the National Science Foundation to provide infrastructure and services to advance the development of hydrologic science and education in the United States. The CUAHSI HydroShare is being developed as an online, collaborative environment for the sharing of hydrologic data and models. It will enable people to easily share, discover and access data and models, retrieve them to their desktop or perform analysis seamlessly in a high performance computing environment, thereby enhancing research, education and application of hydrologic knowledge.
                                 </div>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                                         <li>Enter a Title.</li>
                                         <li>Optionally Add your data files stored on your local computer to add to your resource. </li>
                                         <li>Click the "Create Resource" button.</li>
-                                        <li>A new page will appear where you can add or edit Metadata, Content, Sharing, Comments, and add files. </li>
+                                        <li>A new page will appear where you can add or edit Metadata, Content, Sharing, Comments, and Add files. </li>
                                     </ol>
                                 </div>
                             </div>
@@ -127,7 +127,7 @@
                                         <li><a href="{% url 'login' %}">Sign in</a> to HydroShare.</li>
                                         <li>Click on "Resources" in the navigation bar at the top of the page.</li>
                                         <li>Click on "Owned by me" or "Editable by me" on the left of the page.</li>
-                                        <li>Click on Resource Title to take you to that resource page.</li>
+                                        <li>Click on resource Title to take you to that resource page.</li>
                                         <li>A new page will appear where you can Share, Delete, and Download a resource as well as perform various options on it. </li>
                                     </ol>
                                 </div>
@@ -147,7 +147,6 @@
                                     <ol>
                                         <li><a href="{% url 'login' %}">Sign in</a> to HydroShare.</li>
                                         <li>Click on "Resources" in the navigation bar at the top of the page.</li>
-                                        <li>Use the search bar to find the resource that you would like to rate or comment on.</li>
                                         <li>Select the Title of the resource you would like to rate or comment on.</li>
                                         <li>A new page will appear where you can Comment on a resource as well as perform various options on it. </li>
                                         <li><strong>Currently HydroShare does not support rating resources.</strong> You may, however, rate a comment by clicking the "+1" next to the comment.</li>
